Update ProbeZS Parameter Name Mappings

--- a/probezs-mappings/method-parameter-names.yaml
+++ b/probezs-mappings/method-parameter-names.yaml
@@ -11431,6 +11431,10 @@ ink.ikx.rt.api.internal.utils.IInputPattern:
   paramNames:
   - mapping
 github.kasuminova.mmce.common.helper.IMachineController:
+- name: rotateWithControllerFacing
+  paramsSignature: crafttweaker.api.world.IBlockPos
+  paramNames:
+  - pos
 - name: addModifier
   paramsSignature: java.lang.String,hellfirepvp.modularmachinery.common.modifier.RecipeModifier
   paramNames:
