Update ProbeZS Parameter Name Mappings

--- a/probezs-mappings/method-parameter-names.yaml
+++ b/probezs-mappings/method-parameter-names.yaml
@@ -4855,6 +4855,10 @@ gregtech.api.unification.material.Material:
   paramNames:
   - formula
   - withFormatting
+- name: setComponents
+  paramsSignature: gregtech.api.unification.stack.MaterialStack[]
+  paramNames:
+  - components
 - name: addFlags
   paramsSignature: java.lang.String[]
   paramNames:
